# mcp-prompt-optimizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/: rules
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
scripts/: add_topics.sh
src/: cli.py  log.py  server.py
src/llm/: __init__.py  anthropic_provider.py  base.py  config.py  factory.py  openai_provider.py
src/resources/: __init__.py  template_manager.py
src/tools/: __init__.py  analyze_prompt.py  decompose_task.py  diff_utils.py  generate_code_prompt.py  optimize_and_run.py  optimize_loop.py  optimize_prompt.py  session.py  validation.py
templates/: agentic_task_decomposition.md  code_generation.md  debug_analysis.md  dotnet_code_review.md
tests/: test_cli.py  test_llm.py  test_optimize_and_run.py  test_optimize_loop.py  test_resources.py  test_session.py  test_tools.py  test_validation.py
