[project]
name = "prompt-optimizer-mcp"
version = "0.2.0"
description = "MCP server for AI prompt optimization in agentic workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Yusuf Kucukates", email = "y.kucukates@gmail.com"},
]
keywords = ["mcp", "prompt-engineering", "ai", "llm", "agent", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["mcp[cli]>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yusufkucukates/mcp-prompt-optimizer"
Repository = "https://github.com/yusufkucukates/mcp-prompt-optimizer"
Issues = "https://github.com/yusufkucukates/mcp-prompt-optimizer/issues"

[project.scripts]
prompt-optimizer-mcp = "src.server:main"
prompt-optimizer = "src.cli:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.50.0"]
llm = ["anthropic>=0.39.0", "openai>=1.50.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
